# htmx

./: .gitignore  Cargo.toml  README.md
src/: main.rs
styles/: in.css  out.css
templates/: base.html  contact.html  contact_edit.html  contact_full.html  edit_contact.html  index.html
