[package]
name = "htmx"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.14.0", features = ["blocks"] }
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["fs"] }
